style.css
body {
    margin: 0;
    min-height: 100svh;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    background-color: black;
    color: white;
    font-family: 'Courier New', Courier, monospace;
}
button {
    font-family: 'Courier New', Courier, monospace;
    border-style: none;
    font-size: 36px;
    color: white;
}
.calculator-container {
    background-color: rgb(28, 28, 28);
    border-radius: 10px;
    height: 75svh;
    max-width: 500px;
    display: flex;
    flex-direction: column;
    font-size: 48px;
    margin: 30px;
    padding: 20px;
}
.display {
    text-align: right;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    padding-bottom: 20px;
    height: 30svh;
}
.buttons-container {
    height: 45svh;
    user-select: none;
    display: flex;
    gap: 10px;
}
.left-container {
    display: flex;
    flex-wrap: wrap;
    flex: 3;
    gap: 10px;
}
.operators-container {
    display: flex;
    flex-direction: column;
    flex: 1;
    justify-content: center;
    gap: 10px;
}
.left-container button {
    flex: 1 1 25%;
    background-color: rgb(50, 50, 50);
}
.operators-container button {
    flex: 1;
    background-color: rgb(255, 180, 42);
    font-weight: bold;
}
.left-container .clear-button {
    background-color: rgb(91, 91, 91);
}
.footer {
    margin: 20px;
    text-align: center;
}

